# Transazioni_Finanziarie

./: BankAccount.cpp  BankAccount.h  CMakeLists.txt  Transaction.cpp  Transaction.h  main.cpp
tests/: CMakeLists.txt  test_of_bankaccount.cpp  test_of_transaction.cpp
